ページ番号修正

--- a/src/pages/seiran/1-1-4.md
+++ b/src/pages/seiran/1-1-4.md
@@ -3,8 +3,8 @@ layout: ../../../layouts/NovelBaseLayout.astro
 series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-04
 description: 
-back: "1-3"
-next: "1-5"
+back: "1-1-3"
+next: "1-1-5"
 ---
 
 　ヘッドライトが消え、次いでエンジン音が止んだ。真っ暗で何も見えないが、屋内らしいということはなんとなくわかった。
