--- a/src/pages/seiran/1-1-5.md
+++ b/src/pages/seiran/1-1-5.md
@@ -3,8 +3,8 @@ layout: ../../../layouts/NovelBaseLayout.astro
 series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-05
 description: 
-back: "1-4"
-next: "1-6"
+back: "1-1-4"
+next: "1-1-6"
 ---
 
 「……あんた、誰？」
