--- a/src/pages/seiran/1-1-6.md
+++ b/src/pages/seiran/1-1-6.md
@@ -3,8 +3,8 @@ layout: ../../../layouts/NovelBaseLayout.astro
 series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-06
 description: 
-back: "1-5"
-next: "1-7"
+back: "1-1-5"
+next: "1-1-7"
 ---
 
 　星明かりにぼんやり照らし出された外の景色から顔をそむけると、航は再び部屋の中に視線を巡らせた。平坦な灰色をした床の一角に散らばる、ところどころに色のついた包み。隼斗たちが食料だと言ったそれらに、航はよろよろと近づいていった。ビニールだろうか、中身が透けて見える。航はそのうちの一つを手に取り、しげしげと見回すと眉をひそめた。確かに、中に入っている物体はパンのようだった。包装にも「たっぷりつぶあんパン」と、縁取りされた白い文字がでかでかと主張している。
