--- a/src/pages/seiran/1-1-8.md
+++ b/src/pages/seiran/1-1-8.md
@@ -3,8 +3,8 @@ layout: ../../../layouts/NovelBaseLayout.astro
 series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-08
 description: 
-back: "1-7"
-next: "1-9"
+back: "1-1-7"
+next: "1-1-9"
 ---
 
 　神原に引きずられて部屋の前まで来ると、愛は目を覚ましていた。航が中へと蹴り飛ばされると、いけないものでも目撃してしまったかのように、青い瞳を思い切り逸らす。
