--- a/src/pages/seiran/1-1-9.md
+++ b/src/pages/seiran/1-1-9.md
@@ -3,7 +3,7 @@ layout: ../../../layouts/NovelBaseLayout.astro
 series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-09
 description: 
-back: "1-8"
+back: "1-1-8"
 next: 
 ---
 
