--- a/src/pages/seiran/1-1-1.md
+++ b/src/pages/seiran/1-1-1.md
@@ -4,7 +4,7 @@ series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-01
 description: 
 back: 
-next: "1-2"
+next: "1-1-2"
 ---
 
 　上品な光をたたえるシルクのシャツに、ほどよく着崩した濃紺のジャケット。赤茶色のソバージュ・ヘア。遠くから眺めているだけでも耳が痛くなりそうな黄色い声援を、余裕めいた笑みで彼は受け流す。
