--- a/src/pages/seiran/1-1-2.md
+++ b/src/pages/seiran/1-1-2.md
@@ -3,8 +3,8 @@ layout: ../../../layouts/NovelBaseLayout.astro
 series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-02
 description: 
-back: "1-1"
-next: "1-3"
+back: "1-1-1"
+next: "1-1-3"
 ---
 
 　ずいぶんと遅くなってしまった。移り変わった空の色に、航の足は自然と早まる。家には誰もいないのだから、帰宅が遅いことを咎められるということはもちろんない。ただ、寝る時間がずれ込むことで学校に遅刻してしまうのはよくなかった。
