--- a/src/pages/seiran/1-1-3.md
+++ b/src/pages/seiran/1-1-3.md
@@ -3,8 +3,8 @@ layout: ../../../layouts/NovelBaseLayout.astro
 series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-03
 description: 
-back: "1-2"
-next: "1-4"
+back: "1-1-2"
+next: "1-1-4"
 ---
 
 　帰宅した朝霧は早々に風呂を済ますと、勉強机に向かった。といっても筆記の勉強をするためではない。紅潮させた頬を緩ませながら、鞄の中をごそごそと探る。リズムでも刻むかのように頭が左右に揺れているのは、すこぶる機嫌が良い証拠だ。
