--- a/src/pages/seiran/1-1-7.md
+++ b/src/pages/seiran/1-1-7.md
@@ -3,8 +3,8 @@ layout: ../../../layouts/NovelBaseLayout.astro
 series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-07
 description: 
-back: "1-6"
-next: "1-8"
+back: "1-1-6"
+next: "1-1-8"
 ---
 
 「よう、ずいぶんと朝寝坊なこった」
