レイアウトファイルパス修正

--- a/src/pages/seiran/1-1-9.md
+++ b/src/pages/seiran/1-1-9.md
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/NovelBaseLayout.astro
+layout: ../../layouts/NovelBaseLayout.astro
 series: seiran
 title: 晴嵐の少年少女！晴嵐の盟約編 | 第1章-09
 description: 
